--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
       <div class="logo">
         <a href="#"><img src="/images/logo_white.png"></a>
       </div>
-      <nav>
+      <nav class="mainmenu">
+
         <ul>
           <li><a href="#">Profolio</a></li>
           <li><a href="#">Blog</a></li>
