--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="CSS/style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <title>Ecommerce | TARMT</title>
 </head>
 
@@ -38,7 +39,7 @@
 
     </div>
   </section>
-
+   
 </body>
 
 </html>
