--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
   <link rel="stylesheet" href="CSS/style.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <title>Ecommerce | TARMT</title>
 </head>
 
@@ -25,9 +26,9 @@
       </nav>
       <!-- This is the  nav icons -->
       <div class="navicons">
-        <a href="#" class="cart-icon"><i class="fas fa-shopping-cart"></i></a>
-        <a href="#" class="user-icon"><i class="fas fa-user"></i></a>
-        <a href="#" class="search-icon"><i class="fas fa-search"></i></a>
+        <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
+        <li><a href="#"><i class="fa fa-search"></i></a></li>
+        <li><a href="#"><i class="fa fa-user"></i></a></li>
       </div>
     </div>
     <div class="headline">
@@ -39,7 +40,7 @@
 
     </div>
   </section>
-   
+
 </body>
 
 </html>
