--- a/index.html
+++ b/index.html
@@ -2,14 +2,22 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;400;600;700&family=Poppins:wght@200;300;600;800&display=swap"
+        rel="stylesheet">
     <script src="https://unpkg.com/feather-icons"></script>
-    <title>Ecommerce | TMART</title>
-    
+    <link rel="icon" href="/images/logo.png" type="image/icon type">
+    <link rel="stylesheet" href="CSS/headers.css">
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=**Quicksand:wght@500**&display=swap" rel="stylesheet">
+    <title>Ecommerce Website | TARMT</title>
 </head>
 
 <body>
@@ -27,9 +35,9 @@
 
                 </ul>
                 <div class="iconitems">
-                    <li><a href="#"><i class="fa fa-shopping-cart"></i></a></li>
-                    <li><a href="#"><i class="fa fa-search"></i></a></li>
-                    <li><a href="#"> <i class="fa fa-user"></i></a></li>
+                    <i data-feather="user" class="navicon"></i>
+                    <i data-feather="shopping-cart" class="navicon"></i>
+                    <i data-feather="menu" class="navicon"></i>
                 </div>
 
             </nav>
@@ -44,12 +52,26 @@
         </div>
 
     </div>
+    <!-- styining  the message  area -->
+    <Section class="message">
 
+        <div class="furn">
+            <img src="/images/furn.jpg" alt="furn">
+            <h1>New Product Collection</h1>
+            <a href="#" class="shoppingBtn">Shop Now</a>
+        </div>
+        <div class="bask">
+            <img src="/images/bask.jpg" alt="bask">
+            <h1>New Product Collection</h1>
+            <a href="#" class="shoppingBtn">Shop Now</a>
+        </div>
 
-    <!-- Rest of the content -->
+    </Section>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"></script>
-    <script src="script.js"></script>
+   <!-- This is the feather icons script   -->
+   <script>
+    feather.replace()
+</script>
 </body>
 
 </html>
