--- a/index.html
+++ b/index.html
@@ -1,77 +1,173 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TMART Ecommerce Shop</title>
+    <link rel="stylesheet" href="./assets/styles/style.css">
+    <link rel="stylesheet" href="./assets/styles/hero.css">
+    <link rel="stylesheet" href="./assets/styles/blog-footer.css">
+    <link rel="stylesheet" href="./assets/styles/msg-products.css">
+    <link rel="icon" type="image/x-icon" href="./assets/images/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;400;600;700&family=Poppins:wght@200;300;600;800&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;400;500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/feather-icons"></script>
-    <link rel="icon" href="/images/logo.png" type="image/icon type">
-    <link rel="stylesheet" href="CSS/headers.css">
-    <link rel="stylesheet" href="CSS/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=**Quicksand:wght@500**&display=swap" rel="stylesheet">
-    <title>Ecommerce Website | TARMT</title>
 </head>
-
 <body>
+    <!-- hero section -->
     <section class="hero">
-        <header>
-            <nav class="navbar">
-                <div class="navbar-logo">
-                    <a href="#"><img src="images/logo_white.png"></a>
+        <div class="hero-container"> <!--container for all hero items on top of the overlay-->
+            <header class="header"> <!--container that holds logo navigation and icons-->
+                <div class="h-child logo">
+                    <a href="#">
+                        <img src="./assets/images/Site_logo.png" alt="tmart logo">
+                    </a>
                 </div>
-                <ul class="navbar-menu">
-                    <li><a href="#">Profolio</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Shop</a></li>
-                    <li><a href="#">Contact</a></li>
-
-                </ul>
-                <div class="iconitems">
-                    <i data-feather="user" class="navicon"></i>
-                    <i data-feather="shopping-cart" class="navicon"></i>
-                    <i data-feather="menu" class="navicon"></i>
+                <nav class="h-child nav-menu">
+                    <ul>
+                        <li><a href="#">Portfolio</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Shop</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </nav>
+                <div class="h-child header-icons">
+                    <a href="#">
+                        <i data-feather="user"></i>
+                    </a>
+                    <a href="#">
+                        <i data-feather="shopping-cart"></i>
+                    </a>
+                    <a href="#">
+                        <i data-feather="menu"></i>
+                    </a>
                 </div>
-
-            </nav>
-        </header>
+            </header>
+            <div class="hero-content">
+                <h2>New Product Collection</h2>
+                <button type="button" class="button">SHOP NOW</button>
+            </div>
+        </div>
     </section>
-    </div>
-    <div class="headline">
-        <div class="hero-text">
-            <h1>New Product Collection</h1>
-            <a href="#" class="shoppingBtn">Shop Now</a>
-
+    <section class="message"> <!--section for message,just below hero section-->
+        <div class="msg left"> <!--container for left image and content-->
+            <h2>New Furniture <span class="break">Collection</span></h2>
+            <div class="msg-line">
+                <button type="button" class="button">SHOP NOW</button>
+                <span class="line">
+                    <img src="/assets/images/Line 1.png" alt="line">
+                </span>
+            </div>
         </div>
-
-    </div>
-    <!-- styining  the message  area -->
-    <Section class="message">
-
-        <div class="furn">
-            <img src="/images/furn.jpg" alt="furn">
-            <h1>New Product Collection</h1>
-            <a href="#" class="shoppingBtn">Shop Now</a>
+        <div class="msg right"> <!--container for right image and content-->
+            <h2>New Baskets <span class="break">Collection</span></h2>
+            <div class="msg-line">
+                <button type="button" class="button">SHOP NOW</button>
+                <span class="line">
+                    <img src="/assets/images/Line 1.png" alt="line">
+                </span>
+            </div>
         </div>
-        <div class="bask">
-            <img src="/images/bask.jpg" alt="bask">
-            <h1>New Product Collection</h1>
-            <a href="#" class="shoppingBtn">Shop Now</a>
+    </section>
+    <section class="products"> <!--products section-->
+        <h1 class="headline">Best Products</h1>
+        <div class="pro-container">
+            <div class="product pro1">
+                <h2>Christopher <span class="break break1">Knight Furniture</span></h2>
+                <p>$ 235.23</p>
+            </div>
+            <div class="product pro2">
+                <h2>Wheat Straw <span class="break break1">unbreakable cup</span></h2>
+                <p>$ 67.15</p>
+            </div>
+            <div class="product pro3">
+                <h2>Adidas Classic <span class="break break1">Bag</span></h2>
+                <p>$ 49.82</p>
+            </div>
+            <div class="product pro4">
+                <h2>Desk Pencil - Pen <span class="break break1">Holder</span></h2>
+                <p>$ 22.30</p>
+            </div>
+            <div class="product pro5">
+                <h2>Ripple Creak Key <span class="break break1">Holder</span></h2>
+                <p>$ 8.13</p>
+            </div>
+            <div class="product pro6">
+                <h2>Economical <span class="break break1">Cotton Canvas</span></h2>
+                <p>$ 11.08</p>
+            </div>
+            <div class="product pro7">
+                <h2>Michael Kors <span class="break break1">Original</span></h2>
+                <p>$ 15.10</p>
+            </div>
+            <div class="product pro8">
+                <h2>Bostanten <span class="break break1">Women Leather</span></h2>
+                <p>$ 234.26</p>
+            </div>
         </div>
-
-    </Section>
-
-   <!-- This is the feather icons script   -->
-   <script>
-    feather.replace()
-</script>
+    </section>
+    <section class="blog-section">
+        <h1 class="headline">Recent News</h1>
+        <div class="blog-container">
+            <article class="blog article1">
+                <div class="date-container1">
+                    <div class="date-container2">
+                        <h2 class="date-number">20</h2>
+                        <p class="date-month">may</p>
+                    </div>
+                </div>
+                <div class="blog-ctn">
+                    <h2 class="blog-msg">How to Optimize Your eCommerce Store  <span class="break break1">for Better Conversions</span></h2>
+                    <div>
+                        <button type="button" class="button">read more</button>
+                        <span class="line1">
+                            <img src="/assets/images/Line 1.png" alt="line">
+                        </span>
+                    </div>
+                </div>
+            </article>
+            <article class="blog article2">
+                <div class="date-container1">
+                    <div class="date-container2">
+                        <h2 class="date-number">13</h2>
+                        <p class="date-month">may</p>
+                    </div>
+                </div>
+                <div class="blog-ctn">
+                    <h2 class="blog-msg">Understanding and Implementing SEO for <span class="break break1">eCommerce Success</span></h2>
+                    <div>
+                        <button type="button" class="button">read more</button>
+                        <span class="line1">
+                            <img src="/assets/images/Line 1.png" alt="line">
+                        </span>
+                    </div>
+                </div>
+            </article>
+            <article class="blog article3">
+                <div class="date-container1">
+                    <div class="date-container2">
+                        <h2 class="date-number">04</h2>
+                        <p class="date-month">may</p>
+                    </div>
+                </div>
+                <div class="blog-ctn">
+                    <h2 class="blog-msg">Effective Email Marketing Strategies for  <span class="break break1">eCommerce Businesses</span></h2>
+                    <div>
+                        <button type="button" class="button">read more</button>
+                        <span class="line1">
+                            <img src="/assets/images/Line 1.png" alt="line">
+                        </span>
+                    </div>
+                </div>
+            </article>
+        </div>
+    </section>
+    <script>
+        feather.replace()
+    </script>
 </body>
-
 </html>
