--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TMART Ecommerce Shop</title>
-    <link rel="stylesheet" href="./assets/styles/style.css">
-    <link rel="stylesheet" href="./assets/styles/hero.css">
-    <link rel="stylesheet" href="./assets/styles/blog-footer.css">
-    <link rel="stylesheet" href="./assets/styles/msg-products.css">
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="css/h">
+    <title>Ecommerce Shop | TMART</title>
+     <link rel="stylesheet" href="assets/CSS/style-footer.css">
+     <link rel="stylesheet" href="assets/CSS/Style-products.css">
+     <link rel="stylesheet" href="assets/CSS/style.css">
+     <link rel="stylesheet" href="assets/CSS/StyleHero.css">
     <link rel="icon" type="image/x-icon" href="./assets/images/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
