--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+     <meta charset="UTF-8">
+    <link rel="icon" href="/images/logo.png" type="image/icon type">
+    <link href="https://fonts.googleapis.com/css2?family=**Quicksand:wght@500**&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;400;600;700&family=Poppins:wght@200;300;600;800&display=swap"
+    rel="stylesheet">
+    <title>Ecommerce Website | TARMT</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -10,17 +15,7 @@
     <link rel="stylesheet" href="assets/CSS/Style-footer.css">
     <link rel="stylesheet" href="assets/CSS/Style-products.css">
     <link rel="stylesheet" href="">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;400;600;700&family=Poppins:wght@200;300;600;800&display=swap"
-        rel="stylesheet">
     <script src="https://unpkg.com/feather-icons"></script>
-    <link rel="icon" href="/images/logo.png" type="image/icon type">
-    <link rel="stylesheet" href="CSS/headers.css">
-    <link rel="stylesheet" href="CSS/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=**Quicksand:wght@500**&display=swap" rel="stylesheet">
-    <title>Ecommerce Website | TARMT</title>
 </head>
 <body>
     <!-- hero section -->
