--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
 <body>
     <!-- hero section -->
     <section class="hero">
-        <div class="hero-container"> <!--container for all hero items on top of the overlay-->
-            <header class="header"> <!--container that holds logo navigation and icons-->
+         <!--container for all hero items on top of the overlay-->
+        <div class="hero-container">  
+             <!--container that holds logo navigation and icons-->
+            <header class="header"> 
                 <div class="h-child logo">
                     <a href="#">
                         <img src="./assets/images/Site_logo.png" alt="tmart logo">
