--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-     <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <link rel="icon" href="/images/logo.png" type="image/icon type">
     <link href="https://fonts.googleapis.com/css2?family=**Quicksand:wght@500**&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;400;600;700&family=Poppins:wght@200;300;600;800&display=swap"
-    rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Dosis:wght@300;400;600;700&family=Poppins:wght@200;300;600;800&display=swap"
+        rel="stylesheet">
     <title>Ecommerce Website | TARMT</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,16 +16,18 @@
     <link rel="stylesheet" href="assets/CSS/Style_hero.css">
     <link rel="stylesheet" href="assets/CSS/Style-footer.css">
     <link rel="stylesheet" href="assets/CSS/Style-products.css">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="assets/CSS/footer.css">
     <script src="https://unpkg.com/feather-icons"></script>
+
 </head>
+
 <body>
     <!-- hero section -->
     <section class="hero">
-         <!--container for all hero items on top of the overlay-->
-        <div class="hero-container">  
-             <!--container that holds logo navigation and icons-->
-            <header class="header"> 
+        <!--container for all hero items on top of the overlay-->
+        <div class="hero-container">
+            <!--container that holds logo navigation and icons-->
+            <header class="header">
                 <div class="h-child logo">
                     <a href="#">
                         <img src="./assets/images/Site_logo.png" alt="tmart logo">
@@ -55,8 +59,10 @@
             </div>
         </div>
     </section>
-    <section class="message"> <!--section for message,just below hero section-->
-        <div class="msg left"> <!--container for left image and content-->
+    <section class="message">
+        <!--section for message,just below hero section-->
+        <div class="msg left">
+            <!--container for left image and content-->
             <h2>New Furniture <span class="break">Collection</span></h2>
             <div class="msg-line">
                 <button type="button" class="button">SHOP NOW</button>
@@ -65,7 +71,8 @@
                 </span>
             </div>
         </div>
-        <div class="msg right"> <!--container for right image and content-->
+        <div class="msg right">
+            <!--container for right image and content-->
             <h2>New Baskets <span class="break">Collection</span></h2>
             <div class="msg-line">
                 <button type="button" class="button">SHOP NOW</button>
@@ -75,7 +82,8 @@
             </div>
         </div>
     </section>
-    <section class="products"> <!--products section-->
+    <section class="products">
+        <!--products section-->
         <h1 class="headline">Best Products</h1>
         <div class="pro-container">
             <div class="product pro1">
@@ -123,7 +131,8 @@
                     </div>
                 </div>
                 <div class="blog-ctn">
-                    <h2 class="blog-msg">How to Optimize Your eCommerce Store  <span class="break break1">for Better Conversions</span></h2>
+                    <h2 class="blog-msg">How to Optimize Your eCommerce Store <span class="break break1">for Better
+                            Conversions</span></h2>
                     <div>
                         <button type="button" class="button">read more</button>
                         <span class="line1">
@@ -140,7 +149,8 @@
                     </div>
                 </div>
                 <div class="blog-ctn">
-                    <h2 class="blog-msg">Understanding and Implementing SEO for <span class="break break1">eCommerce Success</span></h2>
+                    <h2 class="blog-msg">Understanding and Implementing SEO for <span class="break break1">eCommerce
+                            Success</span></h2>
                     <div>
                         <button type="button" class="button">read more</button>
                         <span class="line1">
@@ -157,7 +167,8 @@
                     </div>
                 </div>
                 <div class="blog-ctn">
-                    <h2 class="blog-msg">Effective Email Marketing Strategies for  <span class="break break1">eCommerce Businesses</span></h2>
+                    <h2 class="blog-msg">Effective Email Marketing Strategies for <span class="break break1">eCommerce
+                            Businesses</span></h2>
                     <div>
                         <button type="button" class="button">read more</button>
                         <span class="line1">
@@ -168,8 +179,57 @@
             </article>
         </div>
     </section>
+    <footer class="footer">
+        <!-- The footer logo goes here -->
+        <divc class="footer-img">
+            <img src="/assets/images/logo.png" alt="image logo.png">
+            </div>
+            <div class="address_subscr">
+
+                <!-- codeing the address section -->
+                <div class="address">
+                    <div class="location">
+                        <div>
+                            <i data-feather="map-pin"></i>
+                        </div>
+                        <div class="address-text">194 Main Rd T, FS Rayed, USA</div>
+                    </div>
+                    <div class="email">
+                        <div>
+                            <i data-feather="mail"></i>
+                        </div>
+                        <div class="address-text">info@mart.org</div>
+                    </div>
+                    <div class="phone">
+                        <div>
+                            <i data-feather="phone-call"></i>
+                        </div>
+                        <div class="address-text">+233 244 244 244</div>
+                    </div>
+                </div>
+                 
+                <!-- Subscription -->
+                <div class="subscription">
+                    <h3>Subscribe to our newsletter and get <br>10%  off your first purchase</h3>
+                    <div class="subs_form">
+                        <input type="text" placeholder="Enter email address">
+                        <button type="button"><i data-feather="chevron-right"></i></button>
+                    </div>
+                </div>
+            </div>
+            
+            <hr class="hr_line">
+            <div class="copyright">
+                &copy; Tmart - All rights reserved
+
+            </div>
+    </footer>
+    </div>
     <script>
         feather.replace()
     </script>
+
+
 </body>
+
 </html>
