--- a/index.html
+++ b/index.html
@@ -190,19 +190,19 @@
                 <div class="address">
                     <div class="location">
                         <div>
-                            <i data-feather="map-pin"></i>
+                            <i data-feather="map-pin" class="icon-class"></i>
                         </div>
                         <div class="address-text">194 Main Rd T, FS Rayed, USA</div>
                     </div>
                     <div class="email">
                         <div>
-                            <i data-feather="mail"></i>
+                            <i data-feather="mail" class="icon-class"></i>
                         </div>
                         <div class="address-text">info@mart.org</div>
                     </div>
                     <div class="phone">
                         <div>
-                            <i data-feather="phone-call"></i>
+                            <i data-feather="phone-call" class="icon-class"></i>
                         </div>
                         <div class="address-text">+233 244 244 244</div>
                     </div>
